--- a/nginx.conf
+++ b/nginx.conf
@@ -1,33 +1,68 @@
 server {
-    listen       80;
-    server_name  localhost;
+    listen 80;
+    server_name localhost;
+    root /usr/share/nginx/html;
+    index index.html;
 
-    # Compression
+    # Enable compression
     gzip on;
-    gzip_types text/plain text/css application/json application/javascript;
+    gzip_vary on;
     gzip_min_length 1000;
+    gzip_proxied expired no-cache no-store private auth;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    # Security headers
+    # Basic security headers
     add_header X-Content-Type-Options nosniff;
-    add_header X-Frame-Options DENY;
+    add_header X-Frame-Options SAMEORIGIN;
     add_header X-XSS-Protection "1; mode=block";
 
-    # Cache static assets
-    location ~* \.(css|js)$ {
-        expires 7d;
-        add_header Cache-Control "public, max-age=604800";
+    # Serve static files directly
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html;
-        try_files $uri $uri/ =404;
+    # CSS files
+    location ~* \.css$ {
+        add_header Content-Type text/css;
+        expires 7d;
+    }
+
+    # JavaScript files
+    location ~* \.js$ {
+        add_header Content-Type application/javascript;
+        expires 7d;
+    }
+
+    # Images
+    location ~* \.(jpg|jpeg|png|gif|ico|svg|webp)$ {
+        expires 30d;
+    }
+
+    # Fonts
+    location ~* \.(woff|woff2|ttf|otf|eot)$ {
+        expires 30d;
+    }
+
+    # Prevent access to hidden files
+    location ~ /\. {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+
+    # Prevent access to certain file types
+    location ~* \.(htaccess|htpasswd|ini|log|sh|sql)$ {
+        deny all;
     }
 
     # Error pages
-    error_page  404              /404.html;
-    error_page  500 502 503 504  /50x.html;
+    error_page 404 /404.html;
+    error_page 500 502 503 504 /50x.html;
     location = /50x.html {
-        root   /usr/share/nginx/html;
+        root /usr/share/nginx/html;
     }
+
+    # Logging
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 }
