--- a/nginx.conf
+++ b/nginx.conf
@@ -27,6 +27,13 @@ server {
         expires 7d;
     }
 
+    # JSON files - explicit handling
+    location ~* \.json$ {
+        add_header Content-Type application/json;
+        expires 1d;
+        add_header Cache-Control "public, max-age=86400";
+    }
+
     # JavaScript files
     location ~* \.js$ {
         add_header Content-Type application/javascript;
